final changes added to the civic server
